# settings-manager

./: Cargo.toml  README.md
src/: main.rs  menu.rs
