[package]
name = "settings-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive", "unicode", "wrap_help"] }
termion = "1.5.6"
tui = "0.17"
crossterm = "0.22"